Add spinner view (#7)
* Add spinner view

* Use view binding

* Finish calculator

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8" ?>
 <resources>
     <string name="app_name">CS501App</string>
     <string name="btn_doCalc">do calc</string>
