updating ui for rotation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,7 @@
     <string name="cal2_btn_0">0</string>
     <string name="cal2_btn_point">.</string>
     <string name="cal2_btn_equals">=</string>
+    <string name="cal2_btn_mod">mod</string>
+    <string name="cal2_btn_ac">ac</string>
+    <string name="cal2_btn_del">del</string>
 </resources>
