--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="cal2_btn_5">5</string>
     <string name="cal2_btn_6">6</string>
     <string name="cal2_btn_sub">-</string>
-    <string name="cal2_btn_div">\\</string>
+    <string name="cal2_btn_div">/</string>
     <string name="cal2_btn_7">7</string>
     <string name="cal2_btn_8">8</string>
     <string name="cal2_btn_9">9</string>
