--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,7 @@
     <string name="cal2_btn_mod">mod</string>
     <string name="cal2_btn_ac">ac</string>
     <string name="cal2_btn_del">del</string>
+    <string name="btn_3_1">GOTO 3.1</string>
+    <string name="btn_3_2">GOTO 3.2</string>
+    <string name="btn_3_3">GOTO 3.3</string>
 </resources>
