--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,6 @@
     <string name="btn_3_1">GOTO 3.1</string>
     <string name="btn_3_2">GOTO 3.2</string>
     <string name="btn_3_3">GOTO 3.3</string>
+    <string name="Celcius">Calcius</string>
+    <string name="Fahrenheit">Fahrenheit</string>
 </resources>
