--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,12 @@
     <string name="cheat_button">Cheat!</string>
     <string name="judgment_toast">Cheating is wrong.</string>
 
+    <string name="crime_title_hint">Enter a title for the crime.</string>
+    <string name="crime_title_label">Title</string>
+    <string name="crime_details_label">Details</string>
+    <string name="crime_solved_label">Solved</string>
+    <string name="crime_require_police">Require Police</string>
+
     <string name="hangman_choose_letter_title_label">CHOOSE A LETTER</string>
     <string name="hangman_hint_label">Hint:</string>
     <string name="hangman_btn_a">A</string>
