--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,4 +113,5 @@
     <string name="event_start_time">Start time</string>
 
     <string name="server_client_id">535824934955-4qkrgeoin624iegcc7upt3f88pkcle3f.apps.googleusercontent.com</string>
+    <string name="cd_button_send">Send</string>
 </resources>
