--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">CS501App</string>
     <string name="btn_doCalc">do calc</string>
@@ -113,19 +113,17 @@
     <string name="event_start_time">Start time</string>
 
     <string name="server_client_id">535824934955-4qkrgeoin624iegcc7upt3f88pkcle3f.apps.googleusercontent.com</string>
-
-
-    <string name="sync_data">Sync Data</string>
-    <string name="language">Language</string>
-    <string name="sync">Sync</string>
-    <string name="nologon">No Logon</string>
-    <string name="settings">Settings:</string>
-    <string name="importfrom">Import from Student Link</string>
-    <string name="edit_user_info">Edit user info</string>
-    <string name="register_login">Login/register</string>
-    <string name="logout">logout</string>
-    <string name="please_login">Please log in first</string>
-    <string name="user_update">User info updated</string>
+    <string name="sync_data">同步数据</string>
+    <string name="language">语言</string>
+    <string name="sync">同步</string>
+    <string name="nologon">没有登入</string>
+    <string name="settings">设置</string>
+    <string name="importfrom">从官网导入</string>
+    <string name="edit_user_info">编辑用户信息</string>
+    <string name="register_login">登入/注册</string>
+    <string name="logout">登出</string>
+    <string name="please_login">请先登入</string>
+    <string name="user_update">用户信息已更新</string>
 
     <string name="name">Name</string>
     <string name="email">Email</string>
@@ -150,11 +148,5 @@
     <string name="join_group">Join group</string>
     <string name="create_a_group">Create a study group</string>
     <string name="create">Create</string>
-
-
-
-
-
-
 
 </resources>
