--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -97,81 +97,82 @@
     <string name="boggle_submit">SUBMIT</string>
     <string name="boggle_new_game">NEW GAME</string>
 
-    <string name="delete">删除</string>
-    <string name="event_priority">事件优先级</string>
-    <string name="high_priority">高</string>
-    <string name="medium_priority">中</string>
-    <string name="low_priority">低</string>
-    <string name="event_app_name">事件追踪器</string>
-    <string name="add_event">添加事件</string>
-    <string name="bottom_sheet_headline">编辑你的事件</string>
-    <string name="event_name">事件名</string>
-    <string name="event_description">事件描述</string>
-    <string name="priority">事件优先级</string>
-    <string name="cancel">取消</string>
-    <string name="save">保存</string>
-    <string name="event_start_time">开始时间</string>
+    <string name="delete">Eliminar</string>
+    <string name="event_priority">Prioridad del evento</string>
+    <string name="high_priority">ALTA</string>
+    <string name="medium_priority">MEDIA</string>
+    <string name="low_priority">BAJA</string>
+    <string name="event_app_name">Seguidor de Eventos</string>
+    <string name="add_event">Agregar evento</string>
+    <string name="bottom_sheet_headline">Editar su evento</string>
+    <string name="event_name">Nombre del evento</string>
+    <string name="event_description">Descripción del evento</string>
+    <string name="priority">Prioridad del evento</string>
+    <string name="cancel">CANCELAR</string>
+    <string name="save">GUARDAR</string>
+    <string name="event_start_time">Hora de inicio</string>
 
-    <string name="sync_data">同步数据</string>
-    <string name="language">语言</string>
-    <string name="sync">同步</string>
-    <string name="nologon">没有登入</string>
-    <string name="settings">设置</string>
-    <string name="importfrom">从官网导入</string>
-    <string name="edit_user_info">编辑用户信息</string>
-    <string name="register_login">登入/注册</string>
-    <string name="logout">登出</string>
-    <string name="please_login">请先登入</string>
-    <string name="user_update">用户信息已更新</string>
-    <string name="name">用户名</string>
-    <string name="email">邮箱</string>
-    <string name="save_2">保存</string>
-    <string name="mygroup_invites">我的群组邀请</string>
-    <string name="group">群组</string>
-    <string name="invited_by">邀请者</string>
-    <string name="accept">接受</string>
-    <string name="reject">拒绝</string>
-    <string name="user_email">用户邮箱</string>
-    <string name="enter_user_email">进入邮箱</string>
-    <string name="study_group">学习小组</string>
-    <string name="group_name">群组名</string>
-    <string name="group_description">群组细节</string>
-    <string name="group_created">群组创建者</string>
-    <string name="group_member">群组成员</string>
-    <string name="group_invites">群组邀请</string>
-    <string name="group_info">群组信息</string>
-    <string name="creator">创建者</string>
-    <string name="no_group_found">暂无群组</string>
-    <string name="create_group">创建群组</string>
-    <string name="join_group">加入群组</string>
-    <string name="create_a_group">创建学习小组</string>
-    <string name="create">创建</string>
-    <string name="send_invites">发送邀请</string>
-    <string name="past">已完成</string>
-    <string name="today">正在进行</string>
-    <string name="future">即将进行</string>
-    <string name="no_such_events">无事件</string>
-    <string name="show_shared">显示共享事件</string>
-    <string name="event_position">地点</string>
-    <string name="time_slot">时间段</string>
-    <string name="priority_name">优先级</string>
-    <string name="empty_event">空事件</string>
-    <string name="empty_desc">无</string>
-    <string name="take_attendence">签到</string>
-    <string name="import_members">导入学习小组成员</string>
-    <string name="import_members_2">导入小组成员</string>
-    <string name="group_id">小组ID</string>
-    <string name="no_shared_event_found">暂无共享事件</string>
-    <string name="shared_events">目前共享事件</string>
-    <string name="create_shared_event">创建共享事件</string>
-    <string name="create_a_shared_event">创建一个共享事件</string>
-    <string name="shared_event_name">共享事件名字</string>
-    <string name="shared_event_desc">共享事件细节</string>
-    <string name="pick_a_start">请选择一个开始时间</string>
-    <string name="pick_a_end">请选择一个结束时间</string>
-    <string name="select_start">选择开始时间</string>
-    <string name="select_end">选择结束时间</string>
+    <string name="sync_data">Sincronizar datos</string>
+    <string name="language">Idioma</string>
+    <string name="sync">Sincronizar</string>
+    <string name="nologon">Sin inicio de sesión</string>
+    <string name="settings">Ajustes:</string>
+    <string name="importfrom">Importar desde Student Link</string>
+    <string name="edit_user_info">Editar información de usuario</string>
+    <string name="register_login">Iniciar sesión/Registrarse</string>
+    <string name="logout">Cerrar sesión</string>
+    <string name="please_login">Por favor, inicie sesión primero</string>
+    <string name="user_update">Información de usuario actualizada</string>
 
+    <string name="name">Nombre</string>
+    <string name="email">Correo electrónico</string>
+    <string name="save_2">Guardar</string>
+    <string name="mygroup_invites">Mis invitaciones de grupo</string>
+    <string name="group">Grupo</string>
+    <string name="invited_by">Invitado por</string>
+    <string name="accept">Aceptar</string>
+    <string name="reject">Rechazar</string>
+    <string name="user_email">Correo electrónico del usuario</string>
+    <string name="enter_user_email">Introducir el correo electrónico del usuario</string>
+    <string name="study_group">Grupos de estudio</string>
+    <string name="group_name">Nombre del grupo</string>
+    <string name="group_description">Descripción del grupo</string>
+    <string name="group_created">Grupo creado por</string>
+    <string name="group_member">Miembros del grupo</string>
+    <string name="group_invites">Invitaciones del grupo</string>
+    <string name="group_info">Información del grupo</string>
+    <string name="creator">Creador</string>
+    <string name="no_group_found">No se encontraron grupos</string>
+    <string name="create_group">Crear grupo</string>
+    <string name="join_group">Unirse a grupo</string>
+    <string name="create_a_group">Crear un grupo de estudio</string>
+    <string name="create">Crear</string>
+    <string name="send_invites">Enviar invitaciones</string>
 
+    <string name="past">Pasado</string>
+    <string name="today">Hoy</string>
+    <string name="future">Futuro</string>
+    <string name="no_such_events">No hay eventos</string>
+    <string name="show_shared">Mostrar eventos compartidos</string>
+    <string name="event_position">Posición del evento</string>
+    <string name="time_slot">Intervalo de tiempo</string>
+    <string name="priority_name">Prioridad</string>
+    <string name="empty_event">Evento vacío</string>
+    <string name="empty_desc">Descripción del evento vacía</string>
+    <string name="take_attendence">Tomar asistencia</string>
+    <string name="import_members">Importar miembros del grupo de estudio</string>
+    <string name="import_members_2">Importar miembros del grupo</string>
+    <string name="group_id">ID del grupo</string>
+    <string name="no_shared_event_found">No se encontraron eventos compartidos</string>
+    <string name="shared_events">Eventos compartidos</string>
+    <string name="create_shared_event">Crear evento compartido</string>
+    <string name="create_a_shared_event">Crear un evento compartido</string>
+    <string name="shared_event_name">Nombre del evento compartido</string>
+    <string name="shared_event_desc">Descripción del evento compartido</string>
+
+    <string name="pick_a_start">Por favor elige una hora de inicio</string>
+    <string name="pick_a_end">Por favor elige una hora de finalización</string>
+    <string name="select_start">Seleccionar hora de inicio</string>
+    <string name="select_end">Seleccionar hora de finalización</string>
 
 </resources>
