--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,7 +119,7 @@
     <string name="language">Language</string>
     <string name="sync">Sync</string>
     <string name="nologon">No Logon</string>
-    <string name="settings">Settings:</string>
+    <string name="settings">Settings</string>
     <string name="importfrom">Import from Student Link</string>
     <string name="edit_user_info">Edit user info</string>
     <string name="register_login">Login/register</string>
