--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">CS501App</string>
     <string name="btn_doCalc">do calc</string>
@@ -97,92 +97,81 @@
     <string name="boggle_submit">SUBMIT</string>
     <string name="boggle_new_game">NEW GAME</string>
 
-    <string name="delete">Delete</string>
-    <string name="event_priority">event_priority</string>
-    <string name="high_priority">HIGH</string>
-    <string name="medium_priority">MID</string>
-    <string name="low_priority">LOW</string>
-    <string name="event_app_name">Event_Tracker</string>
-    <string name="add_event">Add event</string>
-    <string name="bottom_sheet_headline">Edit your event</string>
-    <string name="event_name">Event Name</string>
-    <string name="event_description">Event Description</string>
-    <string name="priority">Event Priority</string>
-    <string name="cancel">CANCEL</string>
-    <string name="save">SAVE</string>
-    <string name="event_start_time">Start time</string>
+    <string name="delete">删除</string>
+    <string name="event_priority">事件优先级</string>
+    <string name="high_priority">高</string>
+    <string name="medium_priority">中</string>
+    <string name="low_priority">低</string>
+    <string name="event_app_name">事件追踪器</string>
+    <string name="add_event">添加事件</string>
+    <string name="bottom_sheet_headline">编辑你的事件</string>
+    <string name="event_name">事件名</string>
+    <string name="event_description">事件描述</string>
+    <string name="priority">事件优先级</string>
+    <string name="cancel">取消</string>
+    <string name="save">保存</string>
+    <string name="event_start_time">开始时间</string>
 
-    <string name="server_client_id" translatable="false">535824934955-4qkrgeoin624iegcc7upt3f88pkcle3f.apps.googleusercontent.com</string>
-
-
-    <string name="sync_data">Sync Data</string>
-    <string name="language">Language</string>
-    <string name="sync">Sync</string>
-    <string name="nologon">No Logon</string>
-    <string name="settings">Settings</string>
-    <string name="importfrom">Import from Student Link</string>
-    <string name="edit_user_info">Edit user info</string>
-    <string name="register_login">Login/register</string>
-    <string name="logout">logout</string>
-    <string name="please_login">Please log in first</string>
-    <string name="user_update">User info updated</string>
-
-    <string name="name">Name</string>
-    <string name="email">Email</string>
-    <string name="save_2">Save</string>
-    <string name="mygroup_invites">My Group Invites</string>
-    <string name="group">Group</string>
-    <string name="invited_by">Invited by</string>
-    <string name="accept">Accept</string>
-    <string name="reject">Reject</string>
-    <string name="user_email">User Email</string>
-    <string name="enter_user_email">Enter User Email</string>
-    <string name="study_group">Study Groups</string>
-    <string name="group_name">Group Name</string>
-    <string name="group_description">Group Description</string>
-    <string name="group_created">Group Created By</string>
-    <string name="group_member">Group members</string>
-    <string name="group_invites">Group Invites</string>
-    <string name="group_info">Group Info</string>
-    <string name="creator">Creator</string>
-    <string name="no_group_found">No groups found</string>
-    <string name="create_group">Create group</string>
-    <string name="join_group">Join group</string>
-    <string name="create_a_group">Create a study group</string>
-    <string name="create">Create</string>
-    <string name="send_invites">Send Invites</string>
-
-    <string name="past">Past</string>
-    <string name="today">Today</string>
-    <string name="future">Future</string>
-    <string name="no_such_events">No Such Events</string>
-    <string name="show_shared">Show shared events</string>
-    <string name="event_position">Event Position</string>
-    <string name="time_slot">Time Slot</string>
-    <string name="priority_name">Priority</string>
-    <string name="empty_event">Empty Event</string>
-    <string name="empty_desc">Empty Event Description</string>
-    <string name="take_attendence">Take Attendance</string>
-    <string name="import_members">Import Study Group Members</string>
-    <string name="import_members_2">Import Group Members</string>
-    <string name="group_id">Group Id</string>
-    <string name="no_shared_event_found">No SharedEvents found</string>
-    <string name="shared_events">Shared  Events</string>
-    <string name="create_shared_event">Create SharedEvent</string>
-    <string name="create_a_shared_event">Create a Shared Event</string>
-    <string name="shared_event_name">Shared Event Name</string>
-    <string name="shared_event_desc">Shared Event Description</string>
-
-    <string name="pick_a_start">Please pick a start time</string>
-    <string name="pick_a_end">Please pick an end time</string>
-    <string name="select_start">Select start time</string>
-    <string name="select_end">Select end time</string>
+    <string name="sync_data">同步数据</string>
+    <string name="language">语言</string>
+    <string name="sync">同步</string>
+    <string name="nologon">没有登入</string>
+    <string name="settings">设置</string>
+    <string name="importfrom">从官网导入</string>
+    <string name="edit_user_info">编辑用户信息</string>
+    <string name="register_login">登入/注册</string>
+    <string name="logout">登出</string>
+    <string name="please_login">请先登入</string>
+    <string name="user_update">用户信息已更新</string>
+    <string name="name">用户名</string>
+    <string name="email">邮箱</string>
+    <string name="save_2">保存</string>
+    <string name="mygroup_invites">我的群组邀请</string>
+    <string name="group">群组</string>
+    <string name="invited_by">邀请者</string>
+    <string name="accept">接受</string>
+    <string name="reject">拒绝</string>
+    <string name="user_email">用户邮箱</string>
+    <string name="enter_user_email">进入邮箱</string>
+    <string name="study_group">学习小组</string>
+    <string name="group_name">群组名</string>
+    <string name="group_description">群组细节</string>
+    <string name="group_created">群组创建者</string>
+    <string name="group_member">群组成员</string>
+    <string name="group_invites">群组邀请</string>
+    <string name="group_info">群组信息</string>
+    <string name="creator">创建者</string>
+    <string name="no_group_found">暂无群组</string>
+    <string name="create_group">创建群组</string>
+    <string name="join_group">加入群组</string>
+    <string name="create_a_group">创建学习小组</string>
+    <string name="create">创建</string>
+    <string name="send_invites">发送邀请</string>
+    <string name="past">已完成</string>
+    <string name="today">正在进行</string>
+    <string name="future">即将进行</string>
+    <string name="no_such_events">无事件</string>
+    <string name="show_shared">显示共享事件</string>
+    <string name="event_position">地点</string>
+    <string name="time_slot">时间段</string>
+    <string name="priority_name">优先级</string>
+    <string name="empty_event">空事件</string>
+    <string name="empty_desc">无</string>
+    <string name="take_attendence">签到</string>
+    <string name="import_members">导入学习小组成员</string>
+    <string name="import_members_2">导入小组成员</string>
+    <string name="group_id">小组ID</string>
+    <string name="no_shared_event_found">暂无共享事件</string>
+    <string name="shared_events">目前共享事件</string>
+    <string name="create_shared_event">创建共享事件</string>
+    <string name="create_a_shared_event">创建一个共享事件</string>
+    <string name="shared_event_name">共享事件名字</string>
+    <string name="shared_event_desc">共享事件细节</string>
+    <string name="pick_a_start">请选择一个开始时间</string>
+    <string name="pick_a_end">请选择一个结束时间</string>
+    <string name="select_start">选择开始时间</string>
+    <string name="select_end">选择结束时间</string>
 
 
 
-
-
-
-
-    <string name="cd_button_send">Send</string>
 </resources>
