--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -111,7 +111,7 @@
     <string name="cancel">取消</string>
     <string name="save">保存</string>
     <string name="event_start_time">开始时间</string>
-
+    <string name="language_change_success">语言已更改</string>
     <string name="sync_data">同步数据</string>
     <string name="language">语言</string>
     <string name="sync">同步</string>
