--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -179,4 +179,5 @@
     <string name="select_end">Select end time</string>
 
     <string name="cd_button_send">Send</string>
+    <string name="settings_misc">Misc</string>
 </resources>
