--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -175,4 +175,6 @@
 
 
     <string name="settings_misc">杂项</string>
+    <string name="type_student">学生</string>
+    <string name="type_teacher">教师</string>
 </resources>
