--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -181,4 +181,7 @@
 
     <string name="cd_button_send">Send</string>
     <string name="settings_misc">Misc</string>
+
+    <string name="type_student">Student</string>
+    <string name="type_teacher">Teacher</string>
 </resources>
