--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -196,4 +196,5 @@
     <string name="monthly">每月</string>
     <string name="yearly">每年</string>
     <string name="repeat_mode">重复模式</string>
+    <string name="location_not_ok">无法获取地点</string>
 </resources>
