--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -200,5 +200,5 @@
     <string name="monthly">Monthly</string>
     <string name="yearly">Yearly</string>
     <string name="repeat_mode">Repeat Mode</string>
-
+    <string name="location_not_ok">Invalid location</string>
 </resources>
